plugins {
    id 'java-library'
}

repositories {
    maven {
        // RetroFuturaGradle
        name 'GTNH Maven'
        url 'https://nexus.gtnewhorizons.com/repository/public/'
        //noinspection GroovyAssignabilityCheck
        mavenContent {
            includeGroup 'com.gtnewhorizons'
            includeGroup 'com.gtnewhorizons.retrofuturagradle'
        }
    }
    gradlePluginPortal()
    mavenCentral()
    mavenLocal()
}

dependencies {
    annotationProcessor 'com.google.auto.service:auto-service:1.0.1'
    compileOnly 'com.google.auto.service:auto-service-annotations:1.0.1'
    implementation 'com.squareup:javapoet:1.13.0'
}

tasks.withType(JavaCompile).configureEach {
    def javacExportPackages = [
            'jdk.compiler/com.sun.tools.javac.api',
            'jdk.compiler/com.sun.tools.javac.code',
            'jdk.compiler/com.sun.tools.javac.tree',
            'jdk.compiler/com.sun.tools.javac.util'
    ]
    def javacExports = javacExportPackages.collect { "--add-exports=${it}=ALL-UNNAMED".toString() }

    options.compilerArgs.addAll(javacExports)
    options.fork = true
    options.forkOptions.jvmArgs.addAll(javacExports)
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}
